<resources>
    <string name="app_name">SplashBueno</string>
    <string name="UserLabel">Usuario</string>
    <string name="PasswordLabel">Contraseña</string>
    <string name="OkLabel">Acceder</string>
    <string name="ContraLabel">Olvide contraseña</string>
    <string name="PaForm">Registrate</string>
    <string name="Name">Nombre</string>
    <string name="Urss">Nombre de usuario</string>
    <string name="Email">Correo Electronico</string>
    <string name="Nacim">Fecha de nacimiento</string>
    <string name="Telf">Telefono</string>
    <string name="Fin">Finalizar registro</string>
    <string name="res">Recuperar</string>
    <string name="mu">Menú</string>
    <string name="xd">Empty</string>
    <string name="Contras">PasswordTree:</string>
    <string name="bienvenido_label">¡Bienvenido!</string>
    <string name="menu_nuevo">Nuevo</string>
    <string name="menu_guardar">Guardar</string>
    <string name="menu_cerrar">Cerrar Sesión</string>
    <string name="menu_ayuda">Ayuda</string>

</resources>