<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bienvenido"
    tools:context=".Formulario">

    <TextView
        android:layout_marginLeft="25dp"
        android:layout_marginTop="130dp"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Name" />

    <EditText
        android:layout_marginLeft="25dp"
        android:id="@+id/NombreR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Nombre "
        android:inputType="textPersonName" />

    <TextView
        android:layout_marginLeft="25dp"
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Urss" />

    <EditText
        android:layout_marginLeft="25dp"
        android:id="@+id/UsuarioR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Nombre de usuario"
        android:inputType="textPersonName" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp">

        <TextView
            android:id="@+id/Gen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Genero" />

        <RadioButton
            android:id="@+id/Masc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Masculino" />

        <RadioButton

            android:id="@+id/Fem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Femenino" />

    </RadioGroup>

    <TextView
        android:layout_marginLeft="25dp"
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PasswordLabel" />

    <EditText
        android:layout_marginLeft="25dp"
        android:id="@+id/ContraseñaR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Contraseña"
        android:inputType="textPassword" />

    <TextView
        android:layout_marginLeft="25dp"
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Email" />

    <EditText
        android:layout_marginLeft="25dp"
        android:id="@+id/EmailR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Correo Electronico"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/Registro"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Fin" />

    <Button
        android:id="@+id/volver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ir a login"
        android:textColor="#020202" />
</LinearLayout>