<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TextContras"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado"
    android:padding="16dp"
    tools:context=".Listop">


    <TextView
        android:id="@+id/NewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/xd"
        android:textColor="@color/RosaS"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="268dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="331dp"
                android:orientation="horizontal"
                android:padding="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="15dp"
                        android:text="@string/Contras"
                        android:textAlignment="center"
                        android:textSize="20sp"></TextView>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp">

                        <TextView
                            android:layout_width="72dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="Cuenta:"></TextView>

                        <EditText
                            android:id="@+id/editText1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingStart="15dp"></EditText>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/PasswordLabel"></TextView>

                        <EditText
                            android:id="@+id/editText2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingStart="15dp"></EditText>

                    </LinearLayout>

                    <Button
                        android:id="@+id/Ops"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:text="Más opciones"
                        android:textAlignment="center"
                        android:textColor="@color/black"></Button>

                    <Button
                        android:id="@+id/Edit"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:elevation="6dp"
                        android:text="Editar"
                        android:textAlignment="center"
                        android:textColor="@color/black"></Button>

                    <Button
                        android:id="@+id/Borrar"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:elevation="6dp"
                        android:text="Eliminar"
                        android:textAlignment="center"
                        android:textColor="@color/black"></Button>


                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ListView
                android:id="@+id/listViewId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@color/black" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>